# docs/swagger.json
@@ -14,7 +14,7 @@
     "host": "localhost:8070",
     "basePath": "/",
     "paths": {
-        "/tasks": {
+        "/task": {
             "get": {
                 "description": "Retrieve a task by its name",
                 "consumes": [
@@ -141,7 +141,7 @@
                 }
             }
         },
-        "/tasks/list": {
+        "/tasks": {
             "get": {
                 "description": "Retrieve a list of all tasks with optional filters",
                 "consumes": [
@@ -207,10 +207,10 @@
                 "description": {
                     "type": "string"
                 },
-                "name": {
-                    "type": "string"
+                "important": {
+                    "type": "boolean"
                 },
-                "search": {
+                "name": {
                     "type": "string"
                 },
                 "updated_at": {
